<resources>
    <string name="app_name">SocketChatAndroid</string>
    <string name="login">LOGIN</string>
    <string name="not_a_member_sign_up_now">Not a member ? Sign up now.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="resgister">Register</string>
    <string name="name">Name</string>
    <string name="all_ready_registerd_login_me">Already Registerd ! Login Me.</string>
    <string name="newtwork_check">Please check your Internet</string>
    <string name="login_succes">Login Success</string>
    <string name="login_failed">Login failed</string>
    <string name="please_enter_the_credentials">Please enter the credentials</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_password">Enter  password</string>
    <string name="send">SEND</string>
    <string name="online">online</string>
    <string name="empty" />
    <string name="log_out">Log out</string>
    <string name="clear_chat">Clear chat</string>
    <string name="typing">typing....</string>
</resources>
